WP-231 Fix issue where impress carousel widget images were too large in the shortcode UI preview.

--- a/assets/css/widgets/impress-carousel.css
+++ b/assets/css/widgets/impress-carousel.css
@@ -63,3 +63,10 @@
     margin: 0 10px 0 0;
     font-size: 14px;
 }
+
+/*
+ * Preview/Theme Specific Styles
+ */
+.idx-modal-shortcode-preview img {
+    max-width: 100%;
+}
